[package]
name = "common_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.26", features = ["macros", "rt-multi-thread", "rt", "net"]}
tracing = "0.1.26"
tracing-subscriber = "0.3.1"
remoc = { version = "0.13", features = ["rch"] }
acteur = "0.12"
rayon = "1.8"
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std-rustls", "time"]}
async-trait = "0.1"
warp = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
#sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-time", "with-uuid"] }
#async-std = { version = "1", features = ["attributes", "tokio1"] }
#sea-orm-migration = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres"]}